<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:checkable="true"
            android:checked="true"
            android:icon="@drawable/home"
            android:title="@string/home"
            android:visible="true" />

        <item
            android:id="@+id/vm"
            android:icon="@drawable/cake"
            android:title="@string/viewmenu" />
        <item
            android:id="@+id/vr"
            android:icon="@drawable/file"
            android:title="@string/history"/>

        <item
            android:id="@+id/vout"
            android:icon="@drawable/logout"
            android:title="@string/exit" />
    </group>
</menu>