<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/i2"
    android:orientation="vertical"
    tools:context=".login">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/login"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/inputaccount1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/inputAccount"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/inputpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/inputpassword"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/regB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#F1B439"
                android:onClick="onreg"
                android:text="@string/register"
                android:textColor="#6200EA"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/loginB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F1DA61"
                android:onClick="onlogin"
                android:text="@string/login"
                android:textColor="#6200EA"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:backgroundTint="@null" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>