<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="bottom">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">
        <TextView
            android:id="@+id/tv_total_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_toLeftOf="@+id/tv_total_cost"
            android:padding="10dp"
            android:text="@string/money"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_below="@+id/tv_total_cost"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="#9DCCE1"
            android:gravity="center"
            android:text="@string/pre"
            android:textColor="#1B5E20" />

        <TextView
            android:id="@+id/tv_payment"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_below="@+id/tv_total_cost"
            android:layout_alignParentRight="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/payment_bg_selector"
            android:gravity="center"
            android:text="@string/comf_money"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>